[project]
name = "document-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "structlog>=26.1.0",
]
